# GoodNews-DRF

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  initial.json  pyproject.toml
GoodNews/: db.sqlite3  manage.py
GoodNews/API/: models.py  permissions.py  serializers.py  urls.py  views.py
GoodNews/GoodNews/: asgi.py  settings.py  urls.py  wsgi.py
GoodNews/news/: admin.py  apps.py  commands.py  filters.py  forms.py  models.py  signals.py  urls.py  views.py
GoodNews/news/migrations/: 0001_initial.py  0002_usercategory_category_subscribers_and_more.py
GoodNews/news/templatetags/: custom_filters.py
GoodNews/protect/: urls.py  views.py
GoodNews/sign/: forms.py  models.py  urls.py  views.py
GoodNews/static/: index.html
GoodNews/templates/: main.html
GoodNews/templates/flatpages/: default.html
GoodNews/templates/news/: add.html  delete.html  post_detail.html  post_list.html  search.html  send_mail.html  subscription.html
GoodNews/templates/protect/: index.html
GoodNews/templates/sign/: index.html  login.html  logout.html  signup.html
etc/prometheus/: prometheus.yml
requirements/: reqs.txt
src/: celery.py  settings.py  urls.py
src/my_apps/api/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/my_apps/blogs/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
src/my_apps/profiles/: apps.py  forms.py  urls.py  views.py
src/templates/base/: base.html
src/templates/blogs/: main.html  post_detail.html  post_search.html  posts_of_category.html  (+1 more)
(+14 files in other folders)
