[tool.poetry]
name = "goodnews-drf"
version = "0.1.0"
description = "Новостной веб портал GoodNews на основе Django + DRF с публикациями статьями и блогами."
authors = ["xander <moroz070688@gmail.com>"]
readme = "README.md"
packages = [{include = "goodnews_drf"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
django-filter = "^23.3"
django-widget-tweaks = "^1.5.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
easy-thumbnails = "^2.8.5"
celery = "^5.3.4"
redis = "^5.0.1"
eventlet = "^0.33.3"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
djoser = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
